# qemu

./: .gitignore  MAINTAINERS  configure  meson.build
ci/: Dockerfile  Jenkinsfile  configure-linux.sh  configure-win32.sh  nanomsg.cmake
configs/devices/arm-softmmu/: default.mak
configs/devices/avr-softmmu/: default.mak
configs/devices/microblaze-softmmu/: default.mak
default-configs/devices/: arm-softmmu.mak
hw/: Kconfig  meson.build
hw/arm/: Kconfig  armv7m.c  meson.build  virt-cortex-m.c  virt-cortex-r.c
hw/avr/: Kconfig  arduino.c  atmega.c  atmega.h  machine.c  meson.build
hw/intc/: armv7m_nvic.c  grlib_irqmp.c
hw/kp/: Kconfig  args-device.c  const-device.c  edi-arm.c  edi-avr.c  edi-commands.c  edi-commands.h  edi-group.c  edi-list.c  edi-list.h  edi-microblaze.c  edi-regs.c  edi-sparc.c  edi.c  exit-device.c  memfile.c  meson.build  posix-device.c  posix-device.md  trace-events
hw/microblaze/: Kconfig  meson.build  virt-microblaze.c
hw/misc/: grlib_ahb_apb_pnp.c
hw/sparc/: leon3.c
include/block/: aio.h
include/hw/: qdev-core.h
include/hw/intc/: armv7m_nvic.h
include/hw/kp/: args-device.h  const-device.h  edi.h  exit-device.h  posix-device.h
include/hw/sparc/: grlib.h
include/qemu/: main-loop.h
softmmu/: qdev-monitor.c
stubs/: set-fd-handler.c
util/: aio-posix.c  aio-win32.c  main-loop.c
