specific_ss.add(when: 'CONFIG_POSIX', if_true: files('memfile.c'))

specific_ss.add(when: 'CONFIG_KP_EDI', if_true: files('edi.c'))
specific_ss.add(when: 'CONFIG_KP_EDI', if_true: files('edi-commands.c'))
specific_ss.add(when: 'CONFIG_KP_EDI', if_true: files('edi-list.c'))
specific_ss.add(when: 'CONFIG_KP_EDI', if_true: files('edi-group.c'))

specific_ss.add(when: 'CONFIG_KP_ARGS_DEVICE', if_true: files('args-device.c'))
